--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+    "build": "node index.js"
   },
   "engines": {
     "node": "12.0.0"
